# tm_engine

./: Cargo.toml  LICENSE
examples/: db.tm  dfd.tm  test.tm  union.tm  web.tm
notes/: assets.md  asumptions.md  counter_meassures.md  custom_query_language.md  engine.md  findings.md  isomorhism.md  modelling_language.md  query_languages.md  remarks.md  sequence.md  technologies.md  threatel_kasten.md
src/: algo.rs  interpreter.rs  lib.rs  main.rs  parser.rs  threat.rs  types.rs
src/parser/: model.rs  query.rs  types.rs
