[package]
name = "tm_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6"
nom = "7.1"
nom-span = "0.1"
thiserror = "1.0"
itertools = "0.12"
fixedbitset ="0.4.2"
clap = { version = "4.4.18", features = ["derive"] }
eyre = "0.6.11"
