[package]
name = "tm_engine"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6"
winnow = "0.6"
line-span = "0.1"
thiserror = "1.0"
itertools = "0.13"
fixedbitset ="0.4.2"
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
threatmd = { version="0.1", git="https://github.com/raphaelahrens/threatmd"}
serde = {version="1.0", features=["derive"]}
toml = "0.8"
[dev-dependencies]

#winnow = {version = "0.6", features=["std", "debug"]}

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "main"
